<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="no_tasks">No tasks saved. Click Insert to add a new task</string>
	<string name="menu_insert">Add Task</string>
	<string name="context_menu_delete">Delete Todo</string>
	<string name="context_menu_view">View Todo</string>
	<string name="context_menu_edit">Edit Todo</string>
	<string name="context_menu_cancel">Cancel</string>
	<string name="task_edit_hint">What needs to be done?</string>
	<string name="task_edit_confirm">Confirm</string>
	<string name="due_date_hint">Choose a due date</string>
	<string name="todo">TODO</string>
    <string name="insert">Insert</string>
	 <string name="sort">Sort</string>
	<string name="search">Search</string>
    <string name="search_hint">Please, search&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="back">Back</string>
    <string name="view_what">What</string>
    <string name="view_when">When</string>
    <string name="view_priority">Important?</string>
    <string name="view_status">Status</string>
    <string name="view_title">Todo summary:</string>
	
</resources>
