<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/view_titile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/view_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/todo_view_description_label"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/view_what" />

            <TextView
                android:id="@+id/todo_view_description"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/todo_view_date_label"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/view_when" />

            <TextView
                android:id="@+id/todo_view_date"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/todo_view_priority_label"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/view_priority" />

            <TextView
                android:id="@+id/todo_view_priority"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/todo_view_status_label"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/view_status" />

            <TextView
                android:id="@+id/todo_view_status"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp" />

        </TableRow>
    </TableLayout>

</LinearLayout>